packages/next-swc/crates/core/tests/errors/next-font-loaders/font-modules/too-many-args/input.js
import { Inter } from '@next/google-fonts'
fn({}, 10)
const inter = Inter({}, 10)
